# gettime

./: CMakeLists.txt  gettime.c  gettime.h  gettime.pc.in
